plugins {
    id 'net.minecraftforge.gradle' version '5.1.72'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'wtf.gofancy.fancygradle' version '1.1.3-0'
}

ext.configFile = file '../common/common-1.12.properties'

configFile.withReader {
    def prop = new Properties()
    prop.load(it)
    ext.common = new ConfigSlurper().parse prop
}

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

compileJava {
    sourceCompatibility = '8'
    targetCompatibility = '8'
}

repositories {
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven { url = 'https://jitpack.io' }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://repo.spongepowered.org/maven' }
    maven { url = 'https://maven.minecraftforge.net' }
    maven { url = 'https://maven.neoforged.net/releases' }
    mavenCentral()
    gradlePluginPortal()
    maven { url = 'https://maven.gofancy.wtf/releases' }
    maven { url "https://maven.cleanroommc.com" }
}

version = "${common.mcversion}-${modversion}.${modsubversion}"

group = modgroup

archivesBaseName = modarchivename

if (gradle.startParameter.taskNames.any { it == 'jar' || it == 'build' }) {
    def propsFile = file('gradle.properties')
    def props = new Properties()
    propsFile.withInputStream { props.load(it) }
    def currentSub = Integer.parseInt(props['modsubversion'])
    def newSub = currentSub + 1
    modsubversion = newSub
    version = "${common.mcversion}-${modversion}.${modsubversion}"
    jar.doLast {
        props['modsubversion'] = newSub.toString()
        propsFile.withWriter { writer ->
            props.store(writer, null)
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${common.mcversion}-${common.forgeversion}"

    implementation fg.deobf("${common.mjei_version}")
    implementation fg.deobf("curse.maven:${common.imme_version}")
    implementation fg.deobf("curse.maven:${common.mtop_version}")
    implementation fg.deobf("curse.maven:${common.woed_version}")
    implementation fg.deobf("curse.maven:${common.wcui_version}")

    compileOnly fg.deobf("curse.maven:${common.hwya_version}")
    compileOnly fg.deobf("curse.maven:${common.advr_version}")
    compileOnly fg.deobf("curse.maven:${common.libv_version}")
    compileOnly fg.deobf("curse.maven:${common.opcm_version}")

    compileOnly fg.deobf("${common.crft_version}")
    compileOnly fg.deobf("${common.zens_version}")

    annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
    annotationProcessor 'com.google.guava:guava:32.1.2-jre'
    annotationProcessor 'com.google.code.gson:gson:2.8.9'
    implementation('zone.rong:mixinbooter:10.7') { transitive = false }
    annotationProcessor('zone.rong:mixinbooter:10.7') { transitive = false }
}

minecraft {
    accessTransformers {
        file('src/main/resources/META-INF/it_at.cfg')
    }
    mappings channel: 'stable', version: "${common.mcp_mappings}"
    runs {
        client {
            workingDirectory project.file('run')
            args '--width', '1920'
            args '--height', '1080'
            args '--add-opens=java.base/java.lang=ALL-UNNAMED'
            args '--version', common.mcversion
            args '--username', 'tgstyle'
            property 'forge.logging.console.level', 'debug'
            jvmArgs '-Dfml.coreMods.load=mctmods.immersivetechnology.core.MCTMixin'
            mods {
                "${archivesBaseName}" {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file('run/server')
            args '--version', common.mcversion
            property 'forge.logging.console.level', 'debug'
            jvmArgs '-Dfml.coreMods.load=mctmods.immersivetechnology.core.MCTMixin'
            mods {
                "${archivesBaseName}" {
                    source sourceSets.main
                }
            }
        }
    }
}

tasks.withType(JavaExec).configureEach { task ->
    if (task.name in ['runClient', 'runServer']) {
        doFirst {
            def modJar = project.file("build/libs/${archivesBaseName}-${version}.jar")
            if (modJar.exists()) {
                println "Removing JAR from classpath: ${modJar}"
                def newClasspath = classpath.minus(modJar).plus(sourceSets.main.output)
                classpath.setFrom(newClasspath)
            }
            println "Classpath files: ${classpath.files.collect { it.absolutePath }.join(', ')}"
        }
    }
}

processResources {
    inputs.property 'version', "${modversion}.${modsubversion}"
    inputs.property 'mcversion', common.mcversion
    filesMatching('mcmod.info') {
        expand 'version': "${modversion}.${modsubversion}", 'mcversion': common.mcversion
    }
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

fancyGradle {
    patches {
        resources
        asm
        coremods
        codeChickenLib
        mergetool
    }
}

jar {
    manifest {
        attributes 'FMLCorePlugin': 'mctmods.immersivetechnology.core.MCTMixin'
        attributes 'FMLCorePluginContainsFMLMod': 'true'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

sourceSets.configureEach { it.output.resourcesDir = it.output.classesDirs.getFiles().iterator().next() }